# ws-django-rest-framework-proxy

./: .gitignore  README.md  pyproject.toml
requirements/: requirements-testing.txt
rest_framework_proxy/: views.py
